2008-04-22  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/ISOcyr1.ent:
	* tests/list: Patch from Pino Toscano <pino@kde.org> to add
	XML entities support, and fix the DTD mime-type to be the one
	in the RFC (Closes: #14085)

2008-04-21  Pino Toscano  <pino@kde.org>

	* Makefile.am: use $(top_builddir) instead of $(builddir) in the
	"check" target, this way it works also with automake 1.9.

2008-04-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add mime-type for MS Works
	documents, patch from Pino Toscano <pino@kde.org>
	(Closes: #12989)

	* tests/list:
	* tests/test.wps: Add test file for MS Works

2008-04-21  Pino Toscano  <pino@kde.org>

	* freedesktop.org.xml.in:
	* tests/test.cmake:
	* tests/list: Add mime-type for CMake scripts, patch from
	Aleix Pol <aleixpol@gmail.com> (Closes: #15561)

2008-04-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/hello.pack:
	* tests/list: Add mime-type for Pack200 archives, patch from
	Ville Skyttä <ville.skytta@iki.fi> (Closes: #12620)

2008-04-18  Bastien Nocera  <hadess@hadess.net>

	* HACKING: Add mention on how to file bugs

2008-04-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test-vpn.pcf: Add Cisco VPN mime-type (from David Zeuthen
	<david@fubar.dk>), and test case (Closes: #3560)

2008-04-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix expanded acronym for ODB
	files, spotted by jstaniek <js@iidea.pl> (Closes: #12686)

2008-04-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/ocf10-20060911.epub: Add application/epub+zip for
	Electronic Book documents, patch from Pino Toscano
	<pino@kde.org> (Closes: #12625)

2008-04-15  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/list:
	* tests/test.iptables: Add text/x-iptables for iptables
	scripts, for the benefit of gedit, definition from