@@ -3,7 +3,7 @@
   <!ELEMENT mime-info (mime-type)+>
   <!ATTLIST mime-info xmlns CDATA #FIXED "http://www.freedesktop.org/standards/shared-mime-info">
 
-  <!ELEMENT mime-type (comment|acronym|expanded-acronym|glob|magic|root-XML|alias|sub-class-of)*>
+  <!ELEMENT mime-type (comment|acronym|expanded-acronym|generic-icon|glob|magic|root-XML|alias|sub-class-of)*>
   <!ATTLIST mime-type type CDATA #REQUIRED>
 
   <!-- a comment describing a document with the respective MIME type. Example: "WMV video" -->
@@ -17,6 +17,11 @@
   <!-- a comment describing the respective expanded MIME type acronym. Example: "Windows Media Video" -->
   <!ELEMENT expanded-acronym (#PCDATA)>
   <!ATTLIST expanded-acronym xml:lang CDATA #IMPLIED>
+
+  <!-- a generic icon name as per the Icon Naming Specification, only required if computing
+  it from the mime-type would not work, See "generic-icon" in the Shared Mime Specification -->
+  <!ELEMENT generic-icon (#PCDATA)>
+  <!ATTLIST generic-icon name CDATA #IMPLIED>
 
   <!ELEMENT glob EMPTY>
   <!ATTLIST glob pattern CDATA #REQUIRED>
