@@ -1,5 +1,9 @@
 2008-04-22  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Add generic-icon to the DTD
+
+2008-04-22  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in:
 	* tests/ISOcyr1.ent:
 	* tests/list: Patch from Pino Toscano <pino@kde.org> to add
